--- a/src/main/resources/fxml/top-menubar.fxml
+++ b/src/main/resources/fxml/top-menubar.fxml
@@ -6,6 +6,7 @@
 
 <MenuBar minHeight="28.0"  xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.zh.chatter.controller.TopMenuBarController">
     <Menu mnemonicParsing="false" text="操作">
+        <MenuItem fx:id="changeNameMenuItem" mnemonicParsing="false" text="修改昵称" onAction="#changeName"/>
         <MenuItem fx:id="exitMenuItem" mnemonicParsing="false" text="退出" onAction="#handleExit"/>
     </Menu>
     <Menu mnemonicParsing="false" text="其他">
