--- a/src/main/resources/fxml/chat-area.fxml
+++ b/src/main/resources/fxml/chat-area.fxml
@@ -9,12 +9,14 @@
         <ListView fx:id="messageArea" prefHeight="400.0" prefWidth="650.0"/>
     </ScrollPane>
     <ToolBar fx:id="chatToolBar" nodeOrientation="LEFT_TO_RIGHT" prefHeight="30.0" prefWidth="650.0">
-        <Button fx:id="userListButton" alignment="CENTER" layoutX="10.0" layoutY="10.0"
-                mnemonicParsing="false" text="用户列表" onMouseClicked="#showUserList"/>
         <Button fx:id="clearButton" contentDisplay="CENTER" layoutX="70.0" layoutY="10.0"
                 mnemonicParsing="false" text="清屏" onMouseClicked="#handleClearMessage"/>
         <Button fx:id="sendButton" alignment="CENTER" mnemonicParsing="false"
                 onMouseClicked="#handleMessageSend" text="发送"/>
+        <Button fx:id="userListButton" alignment="CENTER" layoutX="10.0" layoutY="10.0"
+                mnemonicParsing="false" text="用户列表" onMouseClicked="#showUserList"/>
+        <Button fx:id="fileTransferDialogButton" alignment="CENTER" mnemonicParsing="false"
+                onMouseClicked="#openFileTransferDialog" text="文件发送列表"/>
     </ToolBar>
     <ScrollPane fx:id="inputBoard" hbarPolicy="NEVER" prefHeight="140.0" prefWidth="650.0">
         <TextArea fx:id="inputArea" prefHeight="140.0" prefWidth="650.0" onKeyPressed="#handleShortcutSend"/>
